package entidades.equipo;

public enum JerarquiaEquipos {
    EQUIPO_BASE,
    CASCO,
    ARMADURA,
    ESCUDO_Y_ESPADA,
    LLAVE
}
