@startuml Equipo

abstract class Equipo{
    +{abstract}mejorar(): Equipo
    +{abstract}recibirDanio()
    +sePuedeMejorar(): boolean
    +compararEquipo(equipamiento: JerarquiaEquipos): boolean
    +{abstract} descripcion(): String
}


enum JerarquiaEquipos{
    EQUIPO_BASE
    CASCO
    ARMADURA
    ESCUDO_Y_ESPADA
    LLAVE
}


class EquipoBase{
    +recibirDanio(energia: Energia)
    +mejorar(): Equipo
    +descripcion(): String
}

class Casco{
    +recibirDanio(energia: Energia)
    +mejorar(): Equipo
    +descripcion(): String
}

class Armadura{
    +recibirDanio(energia: Energia)
    +mejorar(): Equipo
    +descripcion(): String
}

class EscudoYEspada{
    +recibirDanio(energia: Energia)
    +mejorar(): Equipo
    +descripcion(): String
}

class Llave{
    +recibirDanio(energia: Energia)
    +mejorar(): Equipo
    +sePuedeMejorar(): boolean
    +descripcion(): String
}


Equipo -> JerarquiaEquipos


Equipo <|-- EquipoBase
Equipo <|--- Casco
Equipo <|-- Armadura
Equipo <|--- EscudoYEspada
Equipo <|-- Llave


@enduml